syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesforce.cantor.grpc.maps";
option java_outer_classname = "Maps";
option objc_class_prefix = "MapsProtos";

package com.salesforce.cantor.grpc.maps;

message MapProto {
    map<string, string> map = 1;
}

message VoidResponse {}

message NamespacesRequest {}

message NamespacesResponse {
    repeated string namespaces = 1;
}

// maps.create()
message CreateRequest {
    string namespace = 1;
}

// maps.drop()
message DropRequest {
    string namespace = 1;
}

// maps.store()
message StoreRequest {
    string namespace = 1;
    map<string, string> map = 2;
}

// maps.get()
message GetRequest {
    string namespace = 1;
    map<string, string> query = 2;
}

// maps.get()
message GetResponse {
    repeated MapProto results = 1;
}

// maps.delete()
message DeleteRequest {
    string namespace = 1;
    map<string, string> query = 2;
}

// maps.delete()
message DeleteResponse {
    int32 results = 1;
}

service MapsService {
    rpc namespaces (NamespacesRequest) returns (NamespacesResponse) {}
    rpc create (CreateRequest) returns (VoidResponse) {}
    rpc drop (DropRequest) returns (VoidResponse) {}
    rpc store (StoreRequest) returns (VoidResponse) {}
    rpc get (GetRequest) returns (GetResponse) {}
    rpc delete (DeleteRequest) returns (DeleteResponse) {}
}

